--- a/snyk-bbc-app123.json
+++ b/snyk-bbc-app123.json
@@ -1,5 +1,5 @@
 {
-  "key": "snyk-bbc-app123",
+  "key": "snyk-bitbucket-atlassian-connect-app",
   "name": "Snyk Security for Bitbucket Cloud",
   "description": "Snyk Security for Bitbucket Cloud allows developers to easily find and fix security vulnerabilities in open source dependencies and container files, all from within Bitbucket (version 0.0.14)",
   "vendor": {
