Update and rename snyk-bbc-app12345.json to snyk-bbc-app123456.json

--- a/snyk-bbc-app123456.json
+++ b/snyk-bbc-app123456.json
@@ -6,7 +6,7 @@
     "name": "Snyk",
     "url": "https://snyk.io"
   },
-  "baseUrl": "https://bitbucket.atlassian.snykapps.io",
+  "baseUrl": "https://dev.bitbucket.atlassian.snykapps.io",
   "authentication": {
     "type": "jwt"
   },
